@@ -9,13 +9,21 @@ plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'java'
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.10'
 }
+
 
 version '1.0-SNAPSHOT'
 
+javafx {
+    version = "17"
+    modules = [ 'javafx.swing', 'javafx.controls', 'javafx.media', 'javafx.web']
+    configuration = 'compileOnly'
+}
+
 repositories {
     // Use Maven Central for resolving dependencies.
-    jcenter()
+    // jcenter()
     mavenCentral()
 }
 
@@ -48,6 +56,9 @@ dependencies {
 
         include 'suggester-1.1.2.jar'
         include 'GWordCram-0.1.jar'
+
+        // EPUB lib
+        include 'epublib-core-3.1.jar'
 
         // TODO Remove when no longer using Swing/AWT
         include 'jcalendar-1.4.jar'
@@ -139,6 +150,10 @@ dependencies {
     // DOM4J
     implementation 'org.dom4j:dom4j:2.1.3'
 
+    // JavaFX
+    implementation "org.openjfx:javafx-controls:${javafx.version}"
+    implementation "org.openjfx:javafx-media:${javafx.version}"
+
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
@@ -149,8 +164,48 @@ java {
 }
 
 application {
+
+    applicationDefaultJvmArgs =
+    [
+        '-Djava.locale.providers=COMPAT',
+        '--module-path',
+        // This is a property that should be defined (usually) in gradle.prpoerties, i.e. module_path=/usr/share/lib/javafx-sdk-12/lib
+        '--add-modules=javafx.controls,javafx.swing,javafx.media,javafx.web,java.instrument,jdk.attach',
+        '--add-exports',
+        'javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED',
+        '--add-exports',
+        'javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED',
+        '--add-exports',
+        'javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED',
+        '--add-exports',
+        'javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED',
+        '--add-opens',
+        'javafx.graphics/javafx.scene.text=ALL-UNNAMED',
+        '--add-opens',
+        'javafx.graphics/com.sun.javafx.text=ALL-UNNAMED',
+        '--add-exports',
+        'javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED',
+        '--add-exports',
+        'javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED',
+        '--add-exports',
+        'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
+        '--add-exports',
+        'javafx.web/com.sun.javafx.webkit=ALL-UNNAMED',
+        '--add-exports',
+        'javafx.web/com.sun.webkit=ALL-UNNAMED'
+    ]
+
     // Define the main class for the application.
-    mainClass = 'inkon.App'
+    mainClass = 'inkon.Startup'
+}
+
+run {
+    doFirst {
+        jvmArgs = ['--module-path', '/home/bhargavi/openjfx-21.0.1_linux-x64_bin-sdk/javafx-sdk-21.0.1/lib', '--add-modules', ['javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.swing', 'javafx.web'].join(',')]
+    }
+    // if (project.hasProperty("module_path")) {
+    //     jvmArgs = ["--module-path", project.module_path]
+    // }
 }
 
 tasks.named('test') {
